src/test/deca/context/invalid/class/17_this2.deca
/* Description:
    test invalide en utilisant this
    (type de this n'est pas une class)


    Historique:
      cree le 18/01/2020
*/

   {
    int y;
    this.x;

   }
